# SC3510_80

./: README.md
3D_Scanner/: README.md  env.sh
3D_Scanner/Libs/: libEbTransportLayerLib.so.7.1.9.5377  libEbUtilsLib.so.7.1.9.5377  libPtConvertersLib.so.7.1.9.5377  libPtUtilsLib.so.7.1.9.5377  libPvAppUtils.so.6.1.9.5377  libPvBase.so.6.1.9.5377  libPvBuffer.so.6.1.9.5377  libPvCameraBridge.so.6.1.9.5377  libPvDevice.so.6.1.9.5377  libPvGenICam.so.6.1.9.5377  libPvPersistence.so.6.1.9.5377  libPvSerial.so.6.1.9.5377  libPvStream.so.6.1.9.5377  libPvSystem.so.6.1.9.5377  libPvTransmitter.so.6.1.9.5377  libPvVirtualDevice.so.6.1.9.5377  libSimpleImagingLib.so.6.1.9.5377
3D_Scanner/Libs/xml/: ParametersGEV.xml  ParametersU3V.xml
3D_Scanner/MEDataTypes/include/: MEDataTypesCommon.h  PointXYZ.h
3D_Scanner/MEPointCloud/include/: Array.h  MEPointCloudTypes.h  Mesh.h  PointCloud.h  PointCloud2D.h  PointCloud2DBase.h  PointCloudBase.h  PointCloudCommon.h  PointCloudIO.h
3D_Scanner/cmake/: MEGCPPConfig-release.cmake  MEGCPPConfig.cmake  MEGCPPConfigVersion.cmake
3D_Scanner/code/: CMakeLists.txt
3D_Scanner/code/src/: pcd_gen.cpp
3D_Scanner/include/: GenicamDevice.h  GenicamInterface.h  GenicamParameter.h  GenicamParameterBoolean.h  GenicamParameterCommand.h  GenicamParameterEnum.h  GenicamParameterFloat.h  GenicamParameterInt.h  GenicamParameterString.h  GenicamParameterUInt.h  GenicamSystem.h  MEDecl.h  ReflectControlDevice.h  ScanControlDevice.h  SurfaceControlDevice.h
3D_icp/: CMakeLists.txt  README.md  link_to_files.txt
3D_icp/src/: diy_icp.cpp  txt2pcd.cpp
b-splines/: CMakeLists.txt  bspline_fitting.cpp  ds_flügel_1.pcd
downsample/: CMakeLists.txt
downsample/src/: downsample.cpp
